@@ -1,8 +1,9 @@
 # List of source files containing translatable strings.
 # Please keep this file in alphabetical order.
-gnomemeeting.desktop.in
+gnomemeeting.desktop.in.in
 gnomemeeting.schemas.in.in
 lib/about/gnome-about.c
+lib/contacts/gm_contacts-avahi.cpp
 lib/dialog.c
 lib/eggtrayicon.c
 lib/gm_conf-gconf.c
@@ -15,12 +16,12 @@ src/calls_history_window.cpp
 src/chat_window.cpp
 src/config-tool-i18n.h
 src/config.cpp
+src/connection.cpp
 src/druid.cpp
 src/endpoint.cpp
 src/gnomemeeting.cpp
 src/h323gatekeeper.cpp
 src/ils.cpp
-src/lid.cpp
 src/log_window.cpp
 src/main_window.cpp
 src/misc.cpp
