@@ -1,3 +1,7 @@
+2005-12-05  Funda Wang  <fundawang@linux.net.cn>
+
+	* POTFILES.in: make `intltool-update -m` happy by removing obsolete files.
+
 2005-12-04  Damien Sandras  <dsandras@gnome.org>
 
 	* Merged all translations from the gnome-2-12 branch.
